--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ node_modules
 .env
 src/config/dialogflow-credentials.json
 src/config/dialogflow-credentials.json
+config/dialogflow-credentials.json
